--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "web-vitals": "^2.1.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
